[metadata]
name = netman
url = https://github.com/internaphosting/netman
author = Internap Hosting
author-email = opensource@internap.com
summary = A unified REST API to provide vendor-agnostic network automation
description-file =
    README.md
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7

[files]
packages =
    netman

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG

[wheel]
universal = 1

[build_sphinx]
all_files = 1
build-dir = netman/api/doc_generated
source-dir = netman/api/doc_config
